--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-11 20:48:15
+lastsearch = 2024-07-11 21:52:42
 
 [www.instagram.com]
-match = -176.9%%
-title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
-url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
+match = -169.2%%
+title = Embarking on a new journey, @Dior is set ...
+url = https://www.instagram.com/hashtag_legend/p/C0I6TiRv89q/
 
 [hk.linkedin.com]
 match = -100.0%%
