--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-07-11 20:44:21
+lastsearch = 2024-07-11 21:51:49
 
 [www.diepxuan.com]
-match = 35.7%%
-title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+match = 39.3%%
+title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [shopee.vn]
 match = -7.1%%
@@ -235,4 +235,39 @@ url = https://www.lazada.vn/products/chieu-nhua-an-com-ban-rong-dai-du-3-mam-i54
 match = -82.1%%
 title = Bảo vệ làn da dưới trời nắng: Lời khuyên không thể bỏ qua từ ...
 url = https://www.youtube.com/watch?v=QL9SnlIxYz8
+
+[m.facebook.com]
+match = -10.7%%
+title = THANH LÝ VOUCHER KHÁCH SẠN - RESORT - DU LỊCH
+url = https://m.facebook.com/groups/www.lovevietnam.com.vn/posts/7273003739469124/
+
+[techcombank.com]
+match = -32.1%%
+title = Danh sách mã quay thưởng Chương trình Ưu đãi Mùa ...
+url = https://techcombank.com/content/dam/techcombank/public-site/documents/articles/danh-sach-ma-quay-thuong-chuong-trinh-uu-dai-mua-dong-2023-danh-cho-khach-hang-doanh-nghiep-thang-11-2023-cc6f5cbe5f.pdf
+
+[www.scribd.com]
+match = 25.0%%
+title = 5750 Giam Doc Ha Noi 45 | PDF
+url = https://www.scribd.com/document/391922141/5750-Giam-Doc-Ha-Noi-45
+
+[monre.gov.vn]
+match = -4.5%%
+title = Pages - My submissions
+url = https://monre.gov.vn/pages/forms/my-sub.aspx?Paged=TRUE&PagedPrev=TRUE&p__ModerationStatus=0&p_SortBehavior=0&p_Created=20220805 16:01:00&p_ID=28186&PageFirstRow=64001&&View={B076333D-EF98-4BE1-B118-CE4331ED8B4F}
+
+[github.com]
+match = -21.4%%
+title = stock-scrapper/filtered_urls.txt at main
+url = https://github.com/habom2310/stock-scrapper/blob/main/filtered_urls.txt
+
+[thanhtra.gov.vn]
+match = -39.3%%
+title = thanh tra chinh phu long hoa x "a ho chu nghta viet nam
+url = https://thanhtra.gov.vn/web/guest/xem-chi-tiet-tin-tuc?p_p_id=dschutichnews_WAR_vnpteportalchutichnewsportlet_INSTANCE_SnDiNWOCbABy&p_p_lifecycle=2&p_p_state=normal&p_p_mode=view&p_p_resource_id=downloadFile&p_p_cacheability=cacheLevelPage&p_p_col_id=_118_INSTANCE_5O9Gs6eCjwkd__column-1&p_p_col_count=2&_dschutichnews_WAR_vnpteportalchutichnewsportlet_INSTANCE_SnDiNWOCbABy_attackFileUUId=/documents/20181/4488511/0_20230609154155.pdf/72ce7f57-cd5f-475d-a9c7-d520840ac115&_dschutichnews_WAR_vnpteportalchutichnewsportlet_INSTANCE_SnDiNWOCbABy_nameFile=2-2023-cq-1315-1.PDF
+
+[www.qdnd.vn]
+match = -36.8%%
+title = news-16-02-2023.xml
+url = https://www.qdnd.vn/sitemaps/0/2023/02/news-16-02-2023.xml
 
