--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-11 19:27:10
+lastsearch = 2024-07-11 21:51:58
 
 [m.youtube.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.instagram.com]
-match = -127.8%%
-title = Nem cua bể thơm ngon giòn khó cưỡng🤤🤤 🦀Đặc biệt của ...
-url = https://www.instagram.com/p/C5vvMepOtAp/
+match = -144.4%%
+title = Thùy Ngân (@huuloc861) • Instagram photos and videos
+url = https://www.instagram.com/huuloc861/
 
 [www.facebook.com]
 match = -105.6%%
@@ -27,9 +27,9 @@ title = NEM CUA BỂ - NGON PHÁT NGHIỆN, TIỆN NẤU NGAY ...
 url = https://www.facebook.com/cuonnrollvn/videos/nem-cua-bể-ngon-phát-nghiện-tiện-nấu-ngay/248935103794915/
 
 [www.tiktok.com]
-match = -166.7%%
-title = Phát hiện quán nem nướng gần đại học thủ dầu một 1 mẹt ...
-url = https://www.tiktok.com/@hauobinhduong/video/7327600133422550290
+match = -172.2%%
+title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
+url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
 
 [www.youtube.com]
 match = -150.0%%
@@ -120,4 +120,14 @@ url = https://www.vietnam.vn/nem-ran-chao-tom-cua-viet-nam-lot-top-mon-an-nhe-ng
 match = 5.6%%
 title = NEM Furniture JSC's Post
 url = https://www.linkedin.com/posts/nemfurniturejsc_interior-furniture-tongthaunoithat-activity-7215197717474496513-TdUd
+
+[forum.nameberry.com]
+match = -16.7%%
+title = Nathaniel nn Ned? - Boy Names
+url = https://forum.nameberry.com/t/nathaniel-nn-ned/239259
+
+[www.quora.com]
+match = -111.1%%
+title = Why isn't the 38 Super just called the 9mm magnum?
+url = https://www.quora.com/Why-isn-t-the-38-Super-just-called-the-9mm-magnum
 
