--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-11 20:05:46
+lastsearch = 2024-07-11 21:52:20
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -12,9 +12,9 @@ title = Lien Claimants
 url = https://www.dir.ca.gov/ftproot/EAMSLienClaimants.txt
 
 [profiles.ucsf.edu]
-match = 10.0%%
-title = Joan Hilton, DSc, MPH
-url = https://profiles.ucsf.edu/joan.hilton
+match = -15.0%%
+title = Matthew Cooperberg, MD, MPH
+url = https://profiles.ucsf.edu/matthew.cooperberg
 
 [cityofclovis.com]
 match = -65.0%%
@@ -27,9 +27,9 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2023-2024-app-data-by-school-q6.xls
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Avian Influenza Virus (H5N1): a Threat to Human Health
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1865597/
+match = -150.0%%
+title = A Comprehensive Review of Health Benefits of Qigong and ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3085832/
 
 [www.energy.gov]
 match = -95.0%%
@@ -152,9 +152,9 @@ title = PowerFlex 750-Series AC Drives Reference Manual
 url = https://literature.rockwellautomation.com/idc/groups/literature/documents/rm/750-rm002_-en-p.pdf
 
 [som.cuanschutz.edu]
-match = -150.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
+match = -135.0%%
+title = Steve Abman, MD Professor, Pediatrics-Pulmonary Medicine
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/5902
 
 [vc2040.org]
 match = -145.0%%
@@ -217,9 +217,9 @@ title = Fei-Fei Li - Stanford Profiles
 url = https://profiles.stanford.edu/fei-fei-li?tab=publications
 
 [profiles.sc-ctsi.org]
-match = -65.0%%
-title = Ho Sung Kim - USC Health Sciences Profiles
-url = https://profiles.sc-ctsi.org/hosung.kim
+match = -80.0%%
+title = Paul Thompson - USC Health Sciences Profiles
+url = https://profiles.sc-ctsi.org/paul.thompson
 
 [www.nrc.gov]
 match = -100.0%%
@@ -350,4 +350,9 @@ url = https://faculty.uci.edu/profile/?facultyId=2994
 match = -115.0%%
 title = Skeg guard/protector/shield for 2006 90 hp 20" shaft
 url = https://www.etecownersgroup.com/post/skeg-guardprotectorshield-for-2006-90-hp-20-shaft-7475319
+
+[repository.library.noaa.gov]
+match = -100.0%%
+title = A CASE STUDY OF THE BIOI OGICAL INVASIONS OF THE
+url = https://repository.library.noaa.gov/view/noaa/40918/noaa_40918_DS1.pdf
 
