--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-11 15:37:41
+lastsearch = 2024-07-11 23:33:25
 
 [www.lazada.vn]
 match = -60.9%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx
 [www.facebook.com]
 match = 52.2%%
 title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/
+url = https://www.facebook.com/chieunhuathaibinh/?locale=hr_HR
 
 [www.sendo.vn]
 match = -34.8%%
@@ -72,9 +72,9 @@ title = Ngói Nhựa Thái Bình Giá Bán Lẻ Ngói Nhựa ASA/PVC 04 Lớp
 url = https://www.tonpvc.com/thai-binh-gia-ban-le-ngoi-nhua-asa-pvc-04-lop/
 
 [www.diepxuan.com]
-match = 13.0%%
-title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
+match = 26.1%%
+title = Chiếu nhựa Thái Bình 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-160x200.html
 
 [h5.lazada.vn]
 match = -17.4%%
