--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-11 20:19:32
+lastsearch = 2024-07-11 23:47:37
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -335,4 +335,9 @@ url = https://partner.hdbank.com.vn/Default.aspx?ArticleId=b9b9f686-49e9-46bc-b4
 match = -193.3%%
 title = ĐẠI LÝ GIAO NƯỚC TẬN NHÀ QUẬN BÌNH THẠNH, LAVIE ...
 url = https://iwater.vn/tin-thi-truong/iwater-dai-ly-giao-nuoc-tan-nha-khach-hang-thuoc-du-an-la-bonita-so-6-8-duong-d2-phuong-15-quan-binh-thanh-tphcm-13453.html
+
+[www.axel-gl.com]
+match = -240.0%%
+title = ［Đã ngừng］HARWIN D2 2,54 mm, 15,24 mm Pitch dọc 28 cách ...
+url = https://www.axel-gl.com/vi-vn/asone/d/64-2588-77/
 
