--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-11 18:31:32
+lastsearch = 2024-07-11 23:50:46
 
 [dreamland.vn]
 match = -32.0%%
@@ -80,4 +80,19 @@ url = https://www.facebook.com/Dreamland.com.vn/
 match = -40.0%%
 title = 2024 Ryba w cieście piwnym kwestia smaku
 url = https://www.qcyc.ca/?q=node/109&height=730&scroll=auto&url=https://nsp47.ru/8639742fe43y
+
+[www.youtube.com]
+match = -80.0%%
+title = Vintage Doll Unboxing & Review - 1998 Avon Exclusive ...
+url = https://www.youtube.com/watch?v=Rra2SCJqcS0
+
+[www.instagram.com]
+match = -77.8%%
+title = Dreamland
+url = https://www.instagram.com/explore/locations/109169992552829/dreamland/?locale=en_US
+
+[m.youtube.com]
+match = 0.0%%
+title = Dreamland - Original
+url = https://m.youtube.com/watch?v=a0S0-7JccK4
 
