--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-11 23:18:08
+lastsearch = 2024-07-12 02:16:50
 
 [hoa18.com]
 match = -84.2%%
@@ -22,9 +22,9 @@ title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
 url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
 
 [www.facebook.com]
-match = -110.5%%
-title = Bóng đèn Eurosuper - 🎄 TRANG HOÀNG GIÁNG SINH ...
-url = https://www.facebook.com/photo.php?fbid=741433624679263&set=a.636087441880549&type=3&locale=en_GB
+match = 22.2%%
+title = Hồi Sinh Ngọc Rồng
+url = https://www.facebook.com/hoisinhngocrong/
 
 [vietnambiz.vn]
 match = -147.4%%
@@ -33,8 +33,8 @@ url = https://vietnambiz.vn/so-sanh-gia-vang-107-vang-24k-dao-chieu-tang-nhe-ban
 
 [thoibaotaichinhvietnam.vn]
 match = -147.4%%
-title = Bộ Tài chính đẩy mạnh số hóa, giải quyết thủ tục hành chính
-url = https://thoibaotaichinhvietnam.vn/bo-tai-chinh-day-manh-so-hoa-giai-quyet-thu-tuc-hanh-chinh-154607-154607.html
+title = Nâng cao năng lực phân tích hình ảnh soi chiếu hàng hóa ...
+url = https://thoibaotaichinhvietnam.vn/nang-cao-nang-luc-phan-tich-hinh-anh-soi-chieu-hang-hoa-xuat-nhap-khau-128029.html
 
 [vi.wikipedia.org]
 match = 20.0%%
