--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-11 22:40:10
+lastsearch = 2024-07-12 02:18:24
 
 [shopee.vn]
 match = -8.0%%
@@ -22,14 +22,14 @@ title = XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN: TUYỂN GẤP 15 NAM ...
 url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-nam-san-xuat-thuy-tinh/
 
 [www.facebook.com]
-match = 12.0%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -16.0%%
+title = Ăn chơi Đài Loan 台灣 - 去哪吃啥?
+url = https://www.facebook.com/groups/anchoidailoan/
 
 [vi.wikipedia.org]
-match = -4.0%%
-title = Đài Loan – Wikipedia tiếng Việt
-url = https://vi.wikipedia.org/wiki/Đài_Loan
+match = 12.5%%
+title = Lịch sử Đài Loan
+url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
 
 [www.voatiengviet.com]
 match = -72.0%%
@@ -250,4 +250,9 @@ url = https://www.quora.com/How-much-damage-did-France-cause-to-Vietnam-when-it-
 match = 8.0%%
 title = Mua bao tuyet - VanHanhKHXH5
 url = https://groups.io/g/VanHanhKHXH5/topic/56492954?p=Created,,,20,2,0,0::recentpostdate/sticky,,,20,1,20,56492954
+
+[vn.trip.com]
+match = 12.0%%
+title = Vé máy bay Đài Đông Đài Bắc giá rẻ
+url = https://vn.trip.com/flights/taitung-to-taipei/airfares-ttt-tpe/
 
