--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-11 22:50:34
+lastsearch = 2024-07-12 02:11:02
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -290.9%%
-title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
-url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
+match = -309.1%%
+title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
 
 [dandoxe.com]
 match = -154.5%%
@@ -102,9 +102,9 @@ title = BÀN GHẾ ĐÁ THỦ ĐỨC – GIAO HÀNG MIỄN PHÍ TẬN NƠI
 url = https://ghedatruongan.com/ban-ghe-da-thu-duc/
 
 [www.lazada.vn]
-match = -227.3%%
-title = Thảm Lông Cừu Lót Ghế Giá Tốt T06/2024 - Lazada
-url = https://www.lazada.vn/tag/tham-long-cuu-lot-ghe/
+match = -136.4%%
+title = Thảm Lót Ghế Sofa Da Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/tham-lot-ghe-sofa-da/
 
 [richhome.vn]
 match = -190.9%%
