--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-11 20:45:52
+lastsearch = 2024-07-12 02:13:52
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke - UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.4%%
+title = Louise Laurent
+url = https://profiles.ucsd.edu/louise.laurent
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -62,9 +62,9 @@ title = Avian Influenza Virus (H5N1): a Threat to Human Health
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1865597/
 
 [profiles.ucla.edu]
-match = 0.0%%
-title = Stanley F Nelson
-url = https://profiles.ucla.edu/stanley.nelson
+match = -6.7%%
+title = Steven C Cramer
+url = https://profiles.ucla.edu/steven.cramer
 
 [www.sec.gov]
 match = -20.0%%
