--- a/images/bo-ga-chun-chan-thhome-tencel-modal-180x200/config.ini
+++ b/images/bo-ga-chun-chan-thhome-tencel-modal-180x200/config.ini
@@ -3,3 +3,6 @@ path = bo-ga-chun-chan-thhome-tencel-modal-180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-thhome-tencel-modal-180x200.html
 lastopen = 2024-07-12 00:44:34
 
+[search]
+lastsearch = 2024-07-12 02:47:29
+
