--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-11 23:20:52
+lastsearch = 2024-07-12 02:48:46
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 01
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-01.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 09
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-09.html
 
 [www.diepxuan.com]
 match = -3.6%%
@@ -92,9 +92,9 @@ title = Hebergeur internet francais [Mj8Ri1]
 url = http://builder.hufs.ac.kr/goLink.jsp?url=xn--b1af6a9ad0c.xn--p1ai/3628751wwwy1ty65kmcomze5fe43y
 
 [library.dmh.go.th]
-match = 7.1%%
-title = Savazzi renato viadana [pznfoS]
-url = https://library.dmh.go.th/rploei/dublin.linkout.php?url=https://xn--b1axgco8a.xn--p1ai/z94XLpife8fe43z
+match = -14.3%%
+title = Best western hotel bremen city [5knctV]
+url = https://library.dmh.go.th/rploei/dublin.linkout.php?url=https://xn----7sbfccidf1ax5dqo.xn--p1ai/5184637wwwhuoyanbaocomfe5fe43y
 
 [my.unlv.nevada.edu]
 match = 11.5%%
@@ -152,9 +152,9 @@ title = News Staley Farms Private Golf Community Kansas City MO
 url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
-match = 3.6%%
-title = Hotels in Lebanon - LebGuide.com
-url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://startnewsinfo.ru/qohfbezucredfe99.html
+match = -25.0%%
+title = Mypark rep nba 2k16 [aVEolJ] - LebGuide.com
+url = http://www.lebguide.com/lebanon/hotels/redir.asp?link=https://xn--b1awbidf.xn--p1ai/47598136misclinick3fe43a
 
 [news.google.it]
 match = -3.6%%
