--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-07-12 01:22:54
+lastsearch = 2024-07-12 02:48:57
 
 [shope.io.vn]
 match = -59.3%%
@@ -22,9 +22,9 @@ title = Ruột gối đầu họa tiết kẻ VANDA bông gòn cao cấp màu HO
 url = https://giasale.com/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-hot-cap-nhat-lien-tuc-ma-sc55-8
 
 [www.youtube.com]
-match = -66.7%%
-title = Valheim | Vikings Never Rest | Plus New Chat Overlay!
-url = https://www.youtube.com/watch?v=kaKpcWn6Lkk
+match = -92.6%%
+title = DIY Miniature Toys ft. @Robotime / Unboxing rolife bakery & ...
+url = https://www.youtube.com/watch?v=ORnwzK9UVqs
 
 [www.thefedoralounge.com]
 match = -48.1%%
@@ -40,4 +40,14 @@ url = https://forums.naimaudio.com/topic.php?p=2&oid=1566878605753894&coid=15950
 match = 7.4%%
 title = ruột gối hơi cao cấp mẫu hoa trà 45x65cm
 url = https://shopee.vn/ruột-gối-hơi-cao-cấp-mẫu-hoa-trà-45x65cm-i.341290655.22340272262
+
+[www.brentblack.com]
+match = 3.7%%
+title = The Planchador Irons the Hats
+url = https://www.brentblack.com/pages/tour2_page_14.html
+
+[www.amazon.com]
+match = -55.6%%
+title = Comfortable, super easy to position gnome-hat cup :D
+url = https://www.amazon.com/gp/customer-reviews/RY8796J8A4ALO?ASIN=B0757YRJS6
 
