--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-12 01:40:50
+lastsearch = 2024-07-12 02:45:49
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -58.3%%
-title = Nam Joo-hyuk
-url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
+match = -72.7%%
+title = Kristi Noem
+url = https://en.wikipedia.org/wiki/Kristi_Noem
 
 [www.facebook.com]
 match = -87.0%%
@@ -134,7 +134,7 @@ url = https://30rates.com/riot-stock
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=ee0252779c48c2ea&sca_upv=1&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwiXk5-P5PiGAxVVIUQIHS8eAswQsZYEegQIFxAC
+url = https://www.google.com/search?sca_esv=6836664de255f11d&sca_upv=1&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwihhI-U4J-HAxVuMlkFHf4sBXcQsZYEegQIExAC
 
 [www.iri.org]
 match = -65.2%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -91.3%%
-title = Seoul, Hanoi agree to enhance cooperation in science ...
-url = https://en.yna.co.kr/view/AEN20180323002700320
+match = -121.7%%
+title = S. Korean vice foreign minister holds bilateral meetings at ...
+url = https://en.yna.co.kr/view/AEN20171121002500315
 
 [www.usmcu.edu]
 match = -104.3%%
