--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-11 23:20:40
+lastsearch = 2024-07-12 02:48:24
 
 [everonvn.com.vn]
-match = 0.0%%
-title = Vỏ Gối Everon Giảm Giá Es1366
-url = https://everonvn.com.vn/everon/588/vo-goi-everon-giam-gia-es1366
+match = -11.1%%
+title = Bộ Everon Ep1831 - Curtis
+url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
 
 [www.lazada.vn]
 match = -161.1%%
@@ -32,9 +32,9 @@ title = Lịch sử giá 🥑 Vỏ gối đầu cotton poly 45x65 🥑 áo gối
 url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-nhieu-mau-sac-mau-bo-xam-duoc-chon-mau-p.1__19609304624__137416996
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Vỏ gối ES1801 45x65
-url = https://www.diepxuan.com/vo-goi-es1801-45x65.html
+match = -5.6%%
+title = Vỏ gối EP1823 BEARS 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/vo-goi-ep1823-bears-45x65.html
 
 [www.everonqb.com]
 match = -38.9%%
@@ -52,7 +52,7 @@ title = Vỏ gối nằm được bán bởi công ty Lidaco Official Store
 url = https://sieuthicholon.com/vo-goi-nam-23484/?cong-ty=lidaco-official-store
 
 [dienmayhc.com]
-match = -88.9%%
-title = Vỏ gối nằm được bán bởi PHUCTHAI CHĂN GA GỐI
+match = -166.7%%
+title = Vỏ gối nằm được bán bởi người bán PHUCTHAI CHĂN GA GỐI ...
 url = https://dienmayhc.com/vo-goi-nam-23452/?nguoi-ban=phucthai-chan-ga-goi
 
